2013-06-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* url-cookie.el: Implement a command and mode for displaying and
	editing cookies.
	(url-cookie-mode): Fix mode name.

2013-06-21  Glenn Morris  <rgm@gnu.org>

	* url-future.el (url-future-call): Remove useless value call.

2013-05-23  Glenn Morris  <rgm@gnu.org>

	* url.el (mm-dissect-buffer, mm-display-part): Declare.

2013-05-22  Glenn Morris  <rgm@gnu.org>

	* url-handlers.el (mm-save-part-to-file, mm-destroy-parts)
	(mm-decode-string, mail-content-type-get): Declare.

2013-05-21  Glenn Morris  <rgm@gnu.org>

	* url-dav.el (url-http): Require it.
	(url-http-head-file-attributes): Don't autoload it.

	* url-proxy.el (url-http): Autoload it.

2013-05-15  Glenn Morris  <rgm@gnu.org>

	* url-news.el (url-news): Remove empty custom group.

2013-02-16  Glenn Morris  <rgm@gnu.org>

	* url-http.el (url-http-wait-for-headers-change-function):
	Avoid prematurely finding the end of headers when they arrive
	line-by-line.  (Bug#13598)

2013-02-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-cache.el (url-cache-create-filename-using-md5): Don't waste your
	time `requiring' a builtin feature.

2012-12-22  Takafumi Arakaki  <aka.tkf@gmail.com>  (tiny change)

	* url-http.el (url-http-end-of-document-sentinel): Bind relevant
	url-request-* variables around the call to url-http (Bug#11469).

	* url-expand.el (url-default-expander): Don't calculate a default
	url port before checking url-type (Bug#12374).

2012-12-22  Chong Yidong  <cyd@gnu.org>

	* url-parse.el (url-port): Doc fix.

2012-12-03  Chong Yidong  <cyd@gnu.org>

	* url-misc.el (url-do-terminal-emulator): Use make-term instead of
	terminal-emulator.

2012-10-13  Liam Stitt  <stittl@cuug.ab.ca>  (tiny change)

	* url-vars.el (url-uncompressor-alist):
	* url-file.el (url-file-find-possibly-compressed-file, url-file):
	Recognize .xz compression (Bug#11839).

2012-10-13  Chong Yidong  <cyd@gnu.org>

	* url-http.el (url-http):