@@ -1,3 +1,15 @@
+2013-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* url-http.el (status): Remove, unused.
+	(success): Remove var.
+	(url-http-handle-authentication): Return the value that `success'
+	should take instead of setting `success' directly.  Don't set `status'
+	since it's not used.
+	(url-http-parse-headers): Avoid unneeded setq.
+	Move the `setq success'.
+	(url-http): Use pcase.
+	(url-http-file-exists-p): Simplify.
+
 2013-06-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* url-cookie.el: Implement a command and mode for displaying and
